--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "startwars-name",
-  "version": "1.0.0",
+  "version": "0.0.0-semantically-released",
   "description": "Get random Star Wars names",
   "main": "src/index.js",
   "scripts": {
-    "test": "mocha src/index.test.js -w"
+    "commit": "git-cz",
+    "test": "mocha src/index.test.js -w",
+    "semantic-release": "semantic-release pre && npm publish && semantic-release post"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/diego-oliveira/startwars-name.git"
+    "url": "https://github.com/diego-oliveira/startwars-name.git"
   },
   "keywords": [
     "random",
@@ -27,6 +29,12 @@
   },
   "devDependencies": {
     "chai": "3.5.0",
-    "mocha": "2.5.3"
+    "commitizen": "2.8.1",
+    "cz-conventional-changelog": "1.1.6",
+    "mocha": "2.5.3",
+    "semantic-release": "^4.3.5"
+  },
+  "czConfig": {
+    "path": "node_modules/cz-conventional-changelog"
   }
 }
